# OS

./: .gitignore  CMakeLists.txt
cp/: 1.ipynb  CMakeLists.txt  data.txt  main.cpp
cp/data/1/: simple_memory_resource.txt  twins_memory_resource.txt
cp/data/2/: simple_memory_resource.txt  twins_memory_resource.txt
cp/data/3/: simple_memory_resource.txt  twins_memory_resource.txt
cp/data/4/: simple_memory_resource.txt  twins_memory_resource.txt
cp/data/5/: simple_memory_resource.txt  twins_memory_resource.txt
cp/data/6/: simple_memory_resource.txt  twins_memory_resource.txt
cp/docs/: report.docx
cp/src/: BaseMemoryResource.cpp  BaseMemoryResource.h  Benchmark.cpp  Benchmark.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SimpleBlock.cpp  SimpleBlock.h  SimpleMemoryResource.cpp  SimpleMemoryResource.h  TestClass.cpp  TestClass.h  TwinBlock.cpp  TwinBlock.h  TwinsMemoryResource.cpp  TwinsMemoryResource.h  Utils.cpp  Utils.h
cp/tests/: test.cpp
lab_1/: CMakeLists.txt  main.cpp
lab_1/docs/: report.docx
lab_1/src/: child1.cpp  child2.cpp  constants.h  lib.cpp  lib.h  utils.cpp  utils.h
lab_1/tests/: test.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/docs/: report.docx
lab_2/src/: timsort.cpp  timsort.h
lab_2/tests/: test.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/docs/: report.docx
lab_3/src/: SharedObjectHandler.cpp  SharedObjectHandler.h  child1.cpp  child2.cpp  constants.h  lib.cpp  utils.cpp  utils.h
lab_3/tests/: test.cpp
lab_4/: main.cpp  mainDynamic.cpp
lab_4/docs/: report.docx
lab_4/src/: f1.cpp  f1.h  f2.cpp  f2.h
lab_4/tests/: test.cpp
lab_5/: CMakeLists.txt  child.cpp  main.cpp
lab_5/compose/: docker-compose.kafka.yml  docker-compose.yml  docker-compose.zookeeper.yml
lab_5/docs/: report.docx
lab_5/src/: MasterNode.cpp  MasterNode.h  Message.cpp  Message.h  ProcessData.cpp  ProcessData.h  Request.cpp  Request.h  Response.cpp  Response.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  child.cpp  constants.h  main.rs  net.cpp  net.h
lab_5/src/btree/: btree.rs
lab_5/src/tests/: tests.rs
lab_5/tests/: test.cpp
lab_8/: report.docx
